chore: use POST where appropriate; rephrase spec
